--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 
-}
 #orange {
   color: orange;
 }
@@ -15,31 +14,37 @@
   display: none;
   color: white;
   text-align: center;
-  /*background: url("../img/blood.jpg");
+  background: url("../img/blood.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  position: fixed;*/
+  position: fixed;
   height: 100%;
   width: 100%;
   left: 0;
   top: 0;
   margin: 0;
 }
-/*
-.vampireForm{*/
-  /* margin:100px; */
-/*}*/
+
+.vampireForm{
+   margin:100px;
+}
 
 .vampirePic {
-height: 600px;
-width: 100%;
+height: 400px;
+width: 600px;
+border: solid #FAFA12;
 }
 .vampireList >ul {
   text-align: left;
+  font-weight: bold;
   display: inline-block;
-  list-style-type: none;
 }
-
+#btn-vampire{
+  color: #FAFA12;
+}
+h2 {
+  color: #FAFA12;
+}
 .shrinkimg {
   max-width:40%;
 }
