--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,6 @@
   top: 0;
   margin: 0;
 }
-
 .vampireForm{
    margin:100px;
 }
@@ -56,20 +55,35 @@ input {
   text-align: center;
 }
 
-.question1{
+.question1,
+.question4,
+.question5{
   font-size: 20px
 
 }
 
 .question2{
   font-size: 30px
-
 }
 
-.question4{
-  font-size: 20px
+#hiddenRuby,
+#hiddenPython,
+#hiddenJavascript {
+  display: none;
 }
 
-.question5{
-  font-size: 20px
+
+body.ruby{
+  background-color: navy;
+  color: white;
+}
+
+body.javascript{
+background-color: yellow;
+color: purple;
+}
+
+body.ruby{
+  background-color: blue;
+  color:orange;
 }
